@@ -4,6 +4,8 @@ Changelog
 1.6 (xx.xx.xxxx) - IN DEVELOPMENT
 ~~~~~~~~~~~~~~~~
 
+ * Image upload form in image chooser now performs client side validation so that the selected file is not lost in the submission (Jack Paine)
+
 
 1.5 (xx.xx.xxxx)
 ~~~~~~~~~~~~~~~~
